# quadrati_JSON_generator

./: .gitignore  CMakeLists.txt  DinArray.cpp  DinArray.h  Dizionario.h  DynArray.cpp  DynArray.h  HelloWorld.cpp  Lettera.h  Quadrati_JSON_generator.qmlproject  Tile.cpp  Tile.h  WordList.cpp  WordList.h  common_enums.h  custommenubutton.cpp  custommenubutton.h  dictionary_ref.cpp  dictionary_ref.h  dizionario.cpp  dizionario.h  dynarray.cpp  dynarray.h  etichette.h  findPath.cpp  findPath.h  generate_JSON.h  generate_json.cpp  generate_json.h  genetate_JSON.cpp  labelinterattivo.cpp  labelinterattivo.h  lettera.cpp  lettera.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modificadizionario.cpp  modificadizionario.h  (+5 more)
Classes/: Dizionario.cpp  Dizionario.h  DynArray.cpp  Lettera.cpp  Lettera.h  WordList.cpp  WordList.h  gestisci_dizionari.cpp  gestisci_dizionari.h
Quadrati_JSON_generator/: Constants.qml  qmldir
Quadrati_JSON_generator/designer/: plugin.metainfo
Quadrati_JSON_generatorContent/: App.qml  Screen01.ui.qml  Screen01.ui.qml.autosave
old_sources/: generate_JSON.h
old_sources/Classes/: Dizionario.cpp  Lettera.h
old_sources/tools/Genera_dizionario/: dictionary_tree_generator.cpp
source/: findPath.h
source/Classes/: Lettera.cpp  WordList.cpp  WordList.h
source/tools/Genera_dizionario/: dictionary_tree_generator.h
source/tools/Gestisci_dizionario/: aggiungi_etichette_al_dizionario.cpp
tools/: dict_pointer_generator.cpp  dictionary_tree_generator.cpp  dictionary_tree_generator.h
tools/Genera_dizionario/: dictionary_tree_generator.cpp  dictionary_tree_generator.h
tools/Gestisci_dizionario/: aggiungi_etichette_al_dizionario.cpp  muovi_parole_tra_dizionari.cpp
tools/valuta_dizionario/: valuta_dizionario.cpp
